k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: waifu-library
  labels:
    app: waifu-library
